<resources>
    <string name="app_name">Android Trivia</string>
    <!--<string name="unitPrice">5</string>-->

    <string name="Q1">1. Before Google, Android co-founder Andy Rubin tried to sell the operating system to&#x2026;? (Check all the apply)</string>
    <string name="Q2">2. How much did Google pay to acquire Android?</string>
    <string name="Q3">3. The first fully 64-bit-compatible version of Android is&#x2026;?</string>
    <string name="Q4">4. The first mass-market Android smartphone was&#x2026;?</string>

    <string name="LG">LG</string>
    <string name="Samsung">Samsung</string>
    <string name="Siemens">Siemens</string>
    <string name="Nokia">Nokia</string>

    <string name="AngelCake1">1.0 Angel Cake</string>
    <string name="Eclair2">2.0 Eclair</string>
    <string name="IceCream4">4.0 Ice Cream</string>
    <string name="Lolipop5">5.0 Lolipop</string>

    <string name="TMobileG1">T-Mobile G1</string>
    <string name="LGOptimusOne">LG Optimus One</string>
    <string name="MotorolaDroid">Motorola Droid</string>
    <string name="SamsungGalaxyS">Samsung Galaxy S</string>

</resources>
